src/test/ui/generic-associated-types/issue-74824.stderr
error[E0277]: the trait bound `Box<T>: Copy` is not satisfied
  --> $DIR/issue-74824.rs:6:26
   |
LL |     type Copy<T>: Copy = Box<T>;
   |                          ^^^^^^ the trait `Copy` is not implemented for `Box<T>`
   |
note: required by a bound in `UnsafeCopy::Copy`
  --> $DIR/issue-74824.rs:6:19
   |
LL |     type Copy<T>: Copy = Box<T>;
   |                   ^^^^ required by this bound in `UnsafeCopy::Copy`

error[E0277]: the trait bound `T: Clone` is not satisfied
  --> $DIR/issue-74824.rs:6:26
   |
LL |     type Copy<T>: Copy = Box<T>;
   |                          ^^^^^^ the trait `Clone` is not implemented for `T`
   |
   = note: required for `Box<T>` to implement `Clone`
note: required by a bound in `UnsafeCopy::Copy`
  --> $DIR/issue-74824.rs:6:19
   |
LL |     type Copy<T>: Copy = Box<T>;
   |                   ^^^^ required by this bound in `UnsafeCopy::Copy`
help: consider restricting type parameter `T`
   |
LL |     type Copy<T: std::clone::Clone>: Copy = Box<T>;
   |                +++++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
